--- a/css/main.css
+++ b/css/main.css
@@ -1044,7 +1044,34 @@ textarea {
   background-color: inherit;
 }
 
-[placeholder] {
+textarea::-webkit-input-placeholder {
+  padding-left: 16px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+textarea:-ms-input-placeholder {
+  padding-left: 16px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+textarea::-ms-input-placeholder {
+  padding-left: 16px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+textarea::placeholder {
   padding-left: 16px;
   font-weight: 400;
   font-size: 16px;
