--- a/sass/components/hero-section/_hero.scss
+++ b/sass/components/hero-section/_hero.scss
@@ -17,7 +17,7 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url("..//img/headeimg.jpg");
+    url("../img/headeimg.jpg");
 }
 
 .hero__title {
