--- a/sass/components/modal-window/_modal-form.scss
+++ b/sass/components/modal-window/_modal-form.scss
@@ -157,13 +157,14 @@
     line-height: 1.14;
     letter-spacing: 0.01em;
 
+    padding-left: 0;
+
     color: rgba(117, 117, 117, 0.5);
   }
 }
 
 input,
 textarea {
-  padding: 8px;
   font-family: inherit;
   font-size: inherit;
   color: blue;
